--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <header>
         <div class="container">
           <div class="logo">
-            <img src="images/logo.jpg" alt="NGO logo" />
+            <img src="logo.jpg" alt="NGO logo" />
           </div>
           <nav>
             <ul>
