--- a/donation.html
+++ b/donation.html
@@ -11,7 +11,7 @@
     <h1>Welcome Back Donor!!</h1>
     <div class="Donate" id="homesection">
       <h3>The value of life is not in its duration, but in its donation!!</h3>
-      <img id="image2" src="images/54483.jpg" height="60%" width="60%" />
+      <img id="image2" src="54483.jpg" height="60%" width="60%" />
       <form>
         <script
           src="https://checkout.razorpay.com/v1/payment-button.js"
